# extensa-svelte

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  canister_ids.json  dfx.json  index.html  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
public/TEST_GEOAREA/: test_geoarea.json
public/USER_DB/: grxnf-n4ku3-57tbl-guwle-6mih3-2oa6j-vcaml-shoju-nndzg-ctzsa-hae.json  mmare3d.json  rpchr-trmbp-q7gfj-h2s32-bupyq-5yw7s-visvq-srxgk-xu4sp-un3ep-kqe.json
public/images/UI/: buttonS.psd
public/json/: account.json  menu_account.json  menu_editor.json  menu_optimizer.json  menu_top.json  myProfile.json  popup_account_data.json  popup_login.json  popup_login_data.json  register.json  search.json  signIn.json  slider_building.json
src/: App.svelte  main.ts
src/VARCO/helpers/: VARCO.js  VARCO_GMAP.js  VARCO_fileIO.js  (+3 more)
src/constants/: ttl.ts
src/extensa_backend/: Cargo.toml  README.md  extensa_backend.did
src/extensa_backend/src/: lib.rs
src/extensa_backendd/: extensa_backend.did
src/extensa_frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/jsm/: extensa_ed.js  extensa_map.js  extensa_ply.js  extensa_ui.js  index.js
src/lib/: Clock.svelte  EditProject.svelte  Header.svelte  Modal.svelte  MyCounter.svelte  PositionSearch.svelte  SelectedProject.svelte  User.svelte  WebGL.svelte
src/store/: AuthStore.ts  ProjectStore.ts  SpinnerStore.ts
src/types/: project.ts
src/utils/: getIdentityProvider.ts  logWithTimestamp.ts
(+117 files in other folders)
