[package]
name = "extensa_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
hex = "0.4.3"
ic-cdk = "0.12"
ic-stable-structures = "0.6.3"
serde = "1.0.198"
sha2 = "0.10.8"
